[package]
name = "the_patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
rust_dmx = "0.5.0"
opencv = { version = "0.92.0", features = ["clang-runtime"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tui = "0.19.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


